--- a/client/components/button.scss
+++ b/client/components/button.scss
@@ -19,6 +19,12 @@
     @apply whitespace-no-wrap;
     @apply px-8;
 
+    &-small {
+        @apply h-8;
+        @apply px-2;
+        @apply text-xs;
+    }
+
     &:disabled,
     &-disabled {
         @apply opacity-25;
@@ -48,7 +54,7 @@
 
     &-primary {
         @apply border-transparent;
-        @apply bg-gray-900;
+        @apply bg-wsf-green;
         @apply text-white;
 
         &:hover {
