--- a/client/app.scss
+++ b/client/app.scss
@@ -15,6 +15,7 @@ $fa-font-path: '../node_modules/@fortawesome/fontawesome-pro/webfonts';
 // Imports
 
 html {
+    @apply bg-black; // iPhone X letterbox
     font-family: 'Roboto', sans-serif;
 }
 
