--- a/client/app.scss
+++ b/client/app.scss
@@ -15,7 +15,7 @@ $fa-font-path: '../node_modules/@fortawesome/fontawesome-pro/webfonts';
 // Imports
 
 html {
-    @apply bg-wsf-green; // iPhone X letterbox
+    @apply bg-green-dark; // iPhone X letterbox
     font-family: 'Roboto', sans-serif;
 }
 
