--- a/client/components/alert.scss
+++ b/client/components/alert.scss
@@ -1,20 +1,20 @@
 .alert {
-    @apply bg-gray-300;
+    @apply bg-gray-light;
     @apply my-4;
     @apply p-4;
     @apply rounded;
     @apply w-full;
 
     &-info {
-        @apply bg-blue-300;
+        @apply bg-blue-light;
     }
 
     &-warning {
-        @apply bg-orange-300;
+        @apply bg-yellow-light;
     }
 
     &-error {
-        @apply bg-red-600;
+        @apply bg-red-light;
         @apply text-white;
     }
 }
