--- a/client/components/field.scss
+++ b/client/components/field.scss
@@ -2,7 +2,7 @@
     @apply bg-white;
     @apply block;
     @apply border;
-    @apply border-gray-500;
+    @apply border-gray-medium;
     @apply rounded;
     @apply my-4;
     @apply outline-none;
@@ -14,8 +14,8 @@
     @apply w-full;
 
     &-disabled {
-        @apply bg-gray-400;
-        @apply text-gray-600;
+        @apply bg-gray-light;
+        @apply text-gray-dark;
     }
 
     &-label {
@@ -34,7 +34,7 @@
     }
 
     &::placeholder {
-        @apply text-gray-300;
+        @apply text-gray-light;
     }
 
     &-group {
