Speed improvements and estimates
* Stop proxying to WSF directly
* Stop refreshing needlessly
* Stop stacking refreshes on slow devices
* Show estimates based on this run last week

--- a/client/app.scss
+++ b/client/app.scss
@@ -19,6 +19,16 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
+.bg-darken-stripes {
+    background: repeating-linear-gradient(
+        -45deg,
+        theme('colors.transparent') 0px,
+        theme('colors.transparent') 10px,
+        theme('colors.darken.lowest') 10px,
+        theme('colors.darken.lowest') 20px
+    );
+}
+
 .fa-spin-pause {
     animation-play-state: paused;
 }
