--- a/client/scss/googlewebfonts.scss
+++ b/client/scss/googlewebfonts.scss
@@ -1,4 +1,5 @@
 /* copied from https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap */
+/* stylelint-disable */
 
 
 /* cyrillic-ext */
