--- a/client/components/button.scss
+++ b/client/components/button.scss
@@ -69,6 +69,17 @@
     }
   }
 
+  &-outline {
+    @apply border-white;
+    @apply text-white;
+
+    &:hover {
+      @apply border-transparent;
+      @apply bg-white;
+      @apply text-green-dark
+    }
+  }
+
   &-invert {
     @apply border-transparent;
     @apply bg-white;
